# meus_projetos

./: 01_projeto_webapp_ibge.py  02_projeto_webapp_.py  03_projeto_webapp_spotify.py  README.md  main.py  pyproject.toml  xml.py
asimov_news/: 01_agente.py  02_email_tool.py  03_news.py  04_meu_agente.py  prompt.py  prompt_esportivo.py
criando agentes com agno/: 0.llm_call.py  1.1.researcher.py  1.2.analista.py  1.3.own_tools.py
projetos/: 03_projeto_webapp_spotify.py
