[project]
name = "meus-projetos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno==2.0",
    "dotenv>=0.9.9",
    "groq>=0.37.0",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
    "tavily>=1.1.0",
    "tavily-python>=0.7.13",
    "yfinance>=0.2.66",
]
